syntax = "proto3";

package organization;
option go_package = "github.com/UltraHD-dev/smart-campus-monorepo/internal/gen/organization";

service OrganizationService {
  rpc SubmitApplication(SubmitApplicationRequest) returns (SubmitApplicationResponse) {}
  rpc ReviewApplication(ReviewApplicationRequest) returns (ReviewApplicationResponse) {}
  rpc GetPendingApplications(GetPendingApplicationsRequest) returns (GetPendingApplicationsResponse) {}
}

message SubmitApplicationRequest {
  string organization_name = 1;
  string contact_email = 2;
  string contact_phone = 3;
  map<string, string> documents = 4;
}

message SubmitApplicationResponse {
  int32 application_id = 1;
}

message ReviewApplicationRequest {
  int32 application_id = 1;
  string status = 2;
  int32 reviewer_id = 3;
}

message ReviewApplicationResponse {
  bool success = 1;
}

message GetPendingApplicationsRequest {
  int32 limit = 1;
  int32 offset = 2;
}

message GetPendingApplicationsResponse {
  repeated Application applications = 1;
}

message Application {
  int32 id = 1;
  string organization_name = 2;
  string contact_email = 3;
  string contact_phone = 4;
  string status = 5;
  map<string, string> documents = 6;
  int32 reviewed_by = 7;
  string reviewed_at = 8;
}
